Adjust z-index of the fixed/sticky page elements

--- a/sass/blocks/_stock-form-error.sass
+++ b/sass/blocks/_stock-form-error.sass
@@ -48,7 +48,7 @@ $block: ".stock-form-error"
   &_tooltip
     border-radius: 3px
     position: absolute
-    z-index: 85
+    z-index: 90
 
     &:before
       top: 10px
@@ -59,7 +59,7 @@ $block: ".stock-form-error"
     &:after
       content: ""
       position: absolute
-      z-index: 86
+      z-index: 91
       display: block
 
   // $Common form error message MOD: tooltip top left positioned
