--- a/sass/blocks/_stock-page-content.sass
+++ b/sass/blocks/_stock-page-content.sass
@@ -266,7 +266,7 @@ $block: ".stock-page-content"
       #{$block}__data_role_orm-oh-list &,
       #{$block}__tab[data-tab="order-history"] #{$block}__data[data-view="list-view"] &
         position: sticky
-        z-index: 90
+        z-index: 60
         background-color: #fff
 
     @media screen and (min-width: 1121px)
@@ -277,7 +277,7 @@ $block: ".stock-page-content"
       #{$block}__data_role_orm-oh-delivery &,
       #{$block}__tab[data-tab="order-history"] #{$block}__data[data-view="delivery-view"] &
         position: sticky
-        z-index: 90
+        z-index: 60
         background-color: #fff
 
     @media screen and (min-width: 961px) and (max-width: 1360px)
