--- a/sass/blocks/_stock-service-bar.sass
+++ b/sass/blocks/_stock-service-bar.sass
@@ -37,7 +37,7 @@ $block: ".stock-service-bar"
     top: 0
     left: 270px
     right: 0
-    z-index: 95
+    z-index: 70
     width: auto
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .2)
 
@@ -54,7 +54,7 @@ $block: ".stock-service-bar"
     bottom: 0
     left: 270px
     right: 0
-    z-index: 90
+    z-index: 70
     width: auto
     box-shadow: 0 -1px 4px 0 rgba(0, 0, 0, .2)
 
