--- a/sass/blocks/_stock-table.sass
+++ b/sass/blocks/_stock-table.sass
@@ -119,7 +119,7 @@ $block: ".stock-table"
         #{$block}_page_si-form &,
         #{$block}_page_oh-list &
           position: sticky
-          z-index: 80
+          z-index: 50
 
         #{$block}_page_pfo-details &
           top: 60px
@@ -129,7 +129,7 @@ $block: ".stock-table"
         #{$block}_page_oh-details &,
         #{$block}_page_od-details &
           position: sticky
-          z-index: 80
+          z-index: 50
 
       @media screen and (min-width: 961px) and (max-width: 1120px)
         #{$block}_page_sl-list &,
